<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/color"
        android:title="@string/menuitem_color"
        android:icon="@drawable/ic_palette_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/line_width"
        android:title="@string/menuitem_line_width"
        android:icon="@drawable/ic_brush_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/delete_drawing"
        android:title="@string/menuitem_delete"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/drop_qr"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/menuitem_inst"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/drop_aws"
        android:title="@string/menuitem_send_aws"
        android:icon="@drawable/ic_save_24dp"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/menuitem_about"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom">
    </item>


</menu>